--- a/src/main/resources/templates/fragments/MenuDd.html
+++ b/src/main/resources/templates/fragments/MenuDd.html
@@ -14,7 +14,7 @@
                     <img src="/images/dashboard.png" alt="Dashboard Icon" class="menu-icon"> DashBoard
                 </button>
                 <div class="dropdown-content">
-                    <a th:href="@{/applicationStatus}">Application Status</a>
+                    <a th:href="@{/locations}">Application Status</a>
                     <a th:href="@{/orders}">Sample Status</a>
                     <a th:href="@{/ServiceStatus}">Service Status</a>
                     <a th:href="@{/mappingDetail}">Mapping Details</a>
